# christof

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_ES.md  pyproject.toml  requirements.txt
app/: main.py
app/conf/: environment.py  settings.py
app/routes/: camera.py
app/services/: security_webcam.py
app/templates/: index.html
templates/: index.html
