[tool.poetry]
name = "christof"
version = "0.1.0"
description = "Mini home surveillance project"
authors = ["Ignacio Arranz <n.arranz.agueda@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/igarag/christof"
keywords = ['homeproject', 'surveillance']

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.63"
uvicorn = "0.13.4"
jinja2 = "2.11.2"
aiofiles = "0.6.0"
requests = "2.22.0"
environs = "9.2.0"
python-json-logger = "2.0.1"
opencv-python = "4.2.0.32"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
colorlog = "4.8.0"
pygments = "2.7.2"
